--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
         </div>
       <div><img src="https://placehold.co/600x400" alt="hero image" /></div>
     </div>
+
+    <div class="information">
+        <h1>Some random information.</h1>
+        <div class="images">
+            <div>
+              <img src="https://placehold.co/200x200" />
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/200x200" />
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/200x200" />
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/200x200" />
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <h1>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice!</h1>
+        <p>- Thor, God of Thunder</p>
+    </div>
     
 </body>
 </html>
