Finished the styling and adding information for the homepage

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         <h1>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice!</h1>
         <p>- Thor, God of Thunder</p>
     </div>
-    
+
+    <div class="action">
+        <div class="action-text">
+            <h5>Call to action! It's time!</h5>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div><button>Sign up</button></div>
+    </div>    
+    <div class="footer">Copyright @ The Odin Project</div>
+
 </body>
 </html>
